fix: dark mode colors

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,6 +43,15 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #000;
+    color: var(--font-color);
+    background: rgb(243, 243, 243);
+    background: var(--bg-color);
+  }
+}
+
 h1 {
   font-family: 'Raleway';
   font-weight: 900;
